--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="header">
       <div class="bg-cs">
-      <img src="/bg circle bottom.png" alt="">
+      <img src="/img/bg circle bottom.png" alt="">
     </div>
-      <div class="header__arrow-back"><img src="/arrow.svg" alt="" /></div>
-      <div class="header__notification"><span class="cifra">2</span><img src="/noti.svg" alt="" /></div>
+      <div class="header__arrow-back"><img src="img/arrow.svg" alt="" /></div>
+      <div class="header__notification"><span class="cifra">2</span><img src="img/noti.svg" alt="" /></div>
     </div>
 
     <div class="welcome">
@@ -22,8 +22,8 @@
 
     <div class="card">
       <div class="card__logos">
-        <div class="card__logo"><img src="/logo_Mark.svg" alt="" /></div>
-        <div class="card__logo"><img src="/VipStake.svg" alt="" /></div>
+        <div class="card__logo"><img src="img/logo_Mark.svg" alt="" /></div>
+        <div class="card__logo"><img src="img/VipStake.svg" alt="" /></div>
       </div>
       <div class="card__info">
         <div class="card__details">
@@ -62,9 +62,9 @@
           <h3 class="brands-title">Your favorite Brands</h3>
         </div>
         <div class="brands-images">
-          <img src="/Casino Logo.png" alt="Brand 1">
-          <img src="/Casino Logo-1.png" alt="Brand 2">
-          <img src="/Casino Logo-2.png" alt="Brand 3">
+          <img src="/img/Casino Logo.png" alt="Brand 1">
+          <img src="/img/Casino Logo-1.png" alt="Brand 2">
+          <img src="/img/Casino Logo-2.png" alt="Brand 3">
           <span class="brands-count">+15</span>
         </div>
         <button class="add-more-button">+ Add more</button>
@@ -72,7 +72,7 @@
       <div class="weekly-bonus-block">
         <h2 class="title">Weekly Bonus</h2>
         <div class="weekly-wrapper">
-        <img src="/logo.png" alt="Bonus Image" class="bonus-image">
+        <img src="/img/logo.png" alt="Bonus Image" class="bonus-image">
         <div class="bonus-details">
             <p class="bonus-text">100% up to $500</p>
             <p class="bonus-text">+ 200 Free Spins</p>
@@ -82,7 +82,7 @@
 
     </div>
     <div class="vip-concierge-block">
-        <img src="/d6d0fd92d66c4aee28a543c698720ce8.png" alt="" class="vipchats">
+        <img src="/img/d6d0fd92d66c4aee28a543c698720ce8.png" alt="" class="vipchats">
         <div class="vip-info-c">
         <h2 class="vip-title">Personal VIP Concierge</h2>
         <div class="manager-info">
@@ -99,7 +99,7 @@
 
     <div class="tab-content" id="unique-offers">
         <div class="bonus-block">
-            <img src="logo (1).png" alt="Bonus Image" class="bonus-image">
+            <img src="/img/logo (1).png" alt="Bonus Image" class="bonus-image">
             <div class="bonus-details sa">
                 <p class="bonus-text">100% up to $500</p>
                 <p class="bonus-text">+ 200 Free Spins</p>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="bonus-block">
-            <img src="/f34940f3a031143b5a88106efe1c9d44.png" alt="Bonus Image" class="bonus-image">
+            <img src="/img/f34940f3a031143b5a88106efe1c9d44.png" alt="Bonus Image" class="bonus-image">
             <div class="bonus-details sa">
                 <p class="bonus-text">100% up to $500</p>
                 <p class="bonus-text">+ 200 Free Spins</p>
@@ -117,7 +117,7 @@
         </div>
 
         <div class="bonus-block">
-            <img src="/b6a947a4c6853fc376ae3639d351d689.png" alt="Bonus Image" class="bonus-image">
+            <img src="/img/b6a947a4c6853fc376ae3639d351d689.png" alt="Bonus Image" class="bonus-image">
             <div class="bonus-details sa">
                 <p class="bonus-text">100% up to $500</p>
                 <p class="bonus-text">+ 200 Free Spins</p>
@@ -126,7 +126,7 @@
         </div>
 
         <div class="vip-concierge-block">
-            <img src="/d6d0fd92d66c4aee28a543c698720ce8.png" alt="" class="vipchats">
+            <img src="/img/d6d0fd92d66c4aee28a543c698720ce8.png" alt="" class="vipchats">
             <div class="vip-info-c">
             <h2 class="vip-title">Personal VIP Concierge</h2>
             <div class="manager-info">
@@ -139,63 +139,8 @@
         </div>
     </div>
     <div class="bg-css">
-      <img src="/bg circle bottom (1).png" alt="">
+      <img src="/img/bg circle bottom (1).png" alt="">
     </div>
   </body>
-  <script>
-// Скрипт для обработки скролла карточки
-const card = document.querySelector('.card');
-
-function handleScroll() {
-  const scrollPosition = window.scrollY;
-  const scrollStart = 5;
-  const scrollEnd = 50;
-  const maxRotation = 60;
-  const maxMarginBottom = -40;
-
-  if (scrollPosition > scrollStart && scrollPosition < scrollEnd) {
-    const rotation = ((scrollPosition - scrollStart) / (scrollEnd - scrollStart)) * maxRotation;
-    const marginBottom = ((scrollPosition - scrollStart) / (scrollEnd - scrollStart)) * maxMarginBottom;
-    card.style.transform = `perspective(2230px) rotateX(${rotation}deg)`;
-    card.style.marginBottom = `${marginBottom}px`;
-  } else if (scrollPosition >= scrollEnd) {
-    card.style.transform = `perspective(2230px) rotateX(${maxRotation}deg)`;
-    card.style.marginBottom = `${maxMarginBottom}px`;
-  } else {
-    card.style.transform = 'none';
-    card.style.marginBottom = '20px';
-  }
-}
-
-window.addEventListener('scroll', handleScroll);
-handleScroll();
-
-// Скрипт для переключения табов
-const tabs = document.querySelectorAll(".tab");
-const tabContents = document.querySelectorAll(".tab-content");
-
-tabs.forEach((tab) => {
-  tab.addEventListener("click", () => {
-    // Убираем активный класс у всех табов и контента
-    tabs.forEach((t) => t.classList.remove("active"));
-    tabContents.forEach((content) => content.classList.remove("active"));
-
-    // Добавляем активный класс выбранному табу и соответствующему контенту
-    tab.classList.add("active");
-    const targetTabContent = document.getElementById(tab.dataset.tab);
-    if (targetTabContent) {
-      targetTabContent.classList.add("active");
-    } else {
-      console.log(`Контент для таба с id ${tab.dataset.tab} не найден`);
-    }
-  });
-});
-
-// Инициализация начального состояния для табов (отображение первого контента)
-if (tabs.length > 0 && tabContents.length > 0) {
-  tabs[0].classList.add("active");
-  tabContents[0].classList.add("active");
-}
-
-  </script>
+<script src="/script/script.js"></script>
 </html>
