--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="/style/style.css" />
 	</head>
 	<body>
+		<div class="container">
 		<div class="header">
 			<div class="bg-cs">
 				<img src="/img/bg circle bottom.png" alt="" />
@@ -14,9 +15,14 @@
 			<div class="header__arrow-back">
 				<img src="img/arrow.svg" alt="" />
 			</div>
+			<div class="header__icon">
+				<div class="header__edit"></div>
 			<div class="header__notification">
 				<span class="cifra">2</span><img src="img/noti.svg" alt="" />
 			</div>
+			<div class="header__close"></div>
+			</div>
+			
 		</div>
 
 		<div class="wrapper-tablet">
@@ -179,6 +185,7 @@
 		<div class="bg-css">
 			<img src="/img/bg circle bottom (1).png" alt="" />
 		</div>
+	</div>
 	</body>
 	<script src="/script/script.js"></script>
 </html>
