--- a/index.html
+++ b/index.html
@@ -8,184 +8,204 @@
 	</head>
 	<body>
 		<div class="container">
-		<div class="header">
-			<div class="bg-cs">
-				<img src="/img/bg circle bottom.png" alt="" />
-			</div>
-			<div class="header__arrow-back">
-				<img src="img/arrow.svg" alt="" />
-			</div>
-			<div class="header__icon">
-				<div class="header__edit"></div>
-			<div class="header__notification">
-				<span class="cifra">2</span><img src="img/noti.svg" alt="" />
-			</div>
-			<div class="header__close"></div>
-			</div>
-			
-		</div>
-
-		<div class="wrapper-tablet">
-			<div class="wrapper-tablet__right">
-				<div class="welcome">
-					<h1 class="welcome__title">Welcome back,</h1>
-					<p class="welcome__name">James Smith</p>
+			<div class="header">
+				<div class="bg-cs">
+					<img src="/img/bg circle bottom.png" alt="" />
 				</div>
-
-				<div class="card">
-					<div class="card__logos">
-						<div class="card__logo">
-							<img src="img/logo_Mark.svg" alt="" />
-						</div>
-						<div class="card__logo">
-							<img src="img/VipStake.svg" alt="" />
-						</div>
-					</div>
-					<div class="card__info">
-						<div class="card__details">
-							<p class="card__name">James</p>
-							<p class="card__status">PRO PLAYER</p>
-						</div>
-						<div class="card__level">Level 8/12</div>
-					</div>
+				<div class="header__arrow-back">
+					<img src="img/arrow.svg" alt="" />
 				</div>
-				<div class="tabs">
-					<div class="tab" data-tab="dashboard">Dashboard</div>
-					<div class="tab" data-tab="unique-offers">
-						Unique offers
+				<div class="header__icon">
+					<button class="header__edit"></button>
+					<div class="header__notification">
+						<span class="cifra">2</span
+						><img src="img/noti.svg" alt="" />
 					</div>
+					<button class="header__close"></button>
 				</div>
+			</div>
 
-				<!-- Контент табов -->
-				<div class="tab-content" id="dashboard">
-					<div class="progress-block">
-						<div class="progress-info">
-							<div class="progress-info-wrap">
-								<div class="progress-title">Your Progress</div>
-								<div class="progress-level">Pro level</div>
+			<div class="wrapper-tablet">
+				<div class="wrapper-tablet__right">
+					<div class="welcome">
+						<h1 class="welcome__title">Welcome back,</h1>
+						<p class="welcome__name">James Smith</p>
+					</div>
+
+					<div class="card">
+						<div class="card__logos">
+							<div class="card__logo">
+								<img src="img/logo_Mark.svg" alt="" />
 							</div>
-							<div class="info-procent">
-								<div class="progress-number">1280</div>
-								<div class="progress-proc">78%</div>
+							<div class="card__logo">
+								<img src="img/VipStake.svg" alt="" />
 							</div>
 						</div>
-						<div class="progress-bar">
-							<div
-								class="progress-bar-fill"
-								style="width: 78%"
-							></div>
+						<div class="card__info">
+							<div class="card__details">
+								<p class="card__name">James</p>
+								<p class="card__status">PRO PLAYER</p>
+							</div>
+							<div class="card__level">Level 8/12</div>
+						</div>
+					</div>
+					<div class="tabs">
+						<div class="tab" data-tab="dashboard">Dashboard</div>
+						<div class="tab" data-tab="unique-offers">
+							Unique offers
 						</div>
 					</div>
 
-					<div class="brands-block">
-						<div class="brands-header">
-							<h3 class="brands-title">Your favorite Brands</h3>
-						</div>
-						<div class="brands-images">
-							<img src="/img/Casino Logo.png" alt="Brand 1" />
-							<img src="/img/Casino Logo-1.png" alt="Brand 2" />
-							<img src="/img/Casino Logo-2.png" alt="Brand 3" />
-							<span class="brands-count">+15</span>
-						</div>
-						<button class="add-more-button">+ Add more</button>
-					</div>
-					
-					<div class="vip-concierge-block vip-concierge-block--week">
-						<img
-							src="/img/d6d0fd92d66c4aee28a543c698720ce8.png"
-							alt=""
-							class="vipchats"
-						/>
-						<div class="vip-info-c">
-							<h2 class="vip-title">Personal VIP Concierge</h2>
-							<div class="manager-info">
-								<p class="manager-name">Chloe A.</p>
-								<p class="manager-status">Online</p>
+					<!-- Контент табов -->
+					<div class="tab-content" id="dashboard">
+						<div class="progress-block">
+							<div class="progress-info">
+								<div class="progress-info-wrap">
+									<div class="progress-title">
+										Your Progress
+									</div>
+									<div class="progress-level">Pro level</div>
+								</div>
+								<div class="info-procent">
+									<div class="progress-number">1280</div>
+									<div class="progress-proc">78%</div>
+								</div>
+							</div>
+							<div class="progress-bar">
+								<div
+									class="progress-bar-fill"
+									style="width: 78%"
+								></div>
 							</div>
 						</div>
-						<button class="start-chat-button">Start Chat</button>
-					</div>
-				</div>
-			</div>
-			<div class="wrapper-tablet__left">
-				<div class="tab-content" id="unique-offers">
-          <div class="weekly-bonus-block">
-						<h2 class="title">Weekly Bonus</h2>
-						<div class="weekly-wrapper">
+
+						<div class="brands-block">
+							<div class="brands-header">
+								<h3 class="brands-title">
+									Your favorite Brands
+								</h3>
+							</div>
+							<div class="brands-images">
+								<img src="/img/Casino Logo.png" alt="Brand 1" />
+								<img
+									src="/img/Casino Logo-1.png"
+									alt="Brand 2"
+								/>
+								<img
+									src="/img/Casino Logo-2.png"
+									alt="Brand 3"
+								/>
+								<span class="brands-count">+15</span>
+							</div>
+							<button class="add-more-button">+ Add more</button>
+						</div>
+
+						<div
+							class="vip-concierge-block vip-concierge-block--week"
+						>
 							<img
-								src="/img/logo.png"
+								src="/img/d6d0fd92d66c4aee28a543c698720ce8.png"
+								alt=""
+								class="vipchats"
+							/>
+							<div class="vip-info-c">
+								<h2 class="vip-title">
+									Personal VIP Concierge
+								</h2>
+								<div class="manager-info">
+									<p class="manager-name">Chloe A.</p>
+									<p class="manager-status">Online</p>
+								</div>
+							</div>
+							<button class="start-chat-button">
+								Start Chat
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="wrapper-tablet__left">
+					<div class="tab-content" id="unique-offers">
+						<div class="weekly-bonus-block">
+							<h2 class="title">Weekly Bonus</h2>
+							<div class="weekly-wrapper">
+								<img
+									src="/img/logo.png"
+									alt="Bonus Image"
+									class="bonus-image"
+								/>
+								<div class="bonus-details">
+									<p class="bonus-text">100% up to $500</p>
+									<p class="bonus-text">+ 200 Free Spins</p>
+								</div>
+								<button class="get-button">Get</button>
+							</div>
+						</div>
+						<div class="bonus-block">
+							<img
+								src="/img/logo (1).png"
 								alt="Bonus Image"
 								class="bonus-image"
 							/>
-							<div class="bonus-details">
+							<div class="bonus-details sa">
 								<p class="bonus-text">100% up to $500</p>
 								<p class="bonus-text">+ 200 Free Spins</p>
 							</div>
-							<button class="get-button">Get</button>
+							<button class="get-bonus-button">Get Bonus</button>
 						</div>
-					</div>
-					<div class="bonus-block">
-						<img
-							src="/img/logo (1).png"
-							alt="Bonus Image"
-							class="bonus-image"
-						/>
-						<div class="bonus-details sa">
-							<p class="bonus-text">100% up to $500</p>
-							<p class="bonus-text">+ 200 Free Spins</p>
-						</div>
-						<button class="get-bonus-button">Get Bonus</button>
-					</div>
 
-					<div class="bonus-block">
-						<img
-							src="/img/f34940f3a031143b5a88106efe1c9d44.png"
-							alt="Bonus Image"
-							class="bonus-image"
-						/>
-						<div class="bonus-details sa">
-							<p class="bonus-text">100% up to $500</p>
-							<p class="bonus-text">+ 200 Free Spins</p>
-						</div>
-						<button class="get-bonus-button">Get Bonus</button>
-					</div>
-
-					<div class="bonus-block">
-						<img
-							src="/img/b6a947a4c6853fc376ae3639d351d689.png"
-							alt="Bonus Image"
-							class="bonus-image"
-						/>
-						<div class="bonus-details sa">
-							<p class="bonus-text">100% up to $500</p>
-							<p class="bonus-text">+ 200 Free Spins</p>
-						</div>
-						<button class="get-bonus-button">Get Bonus</button>
-					</div>
-
-					<div class="vip-concierge-block">
-						<img
-							src="/img/d6d0fd92d66c4aee28a543c698720ce8.png"
-							alt=""
-							class="vipchats"
-						/>
-						<div class="vip-info-c">
-							<h2 class="vip-title">Personal VIP Concierge</h2>
-							<div class="manager-info">
-								<p class="manager-name">Chloe A.</p>
-								<p class="manager-status">Online</p>
+						<div class="bonus-block">
+							<img
+								src="/img/f34940f3a031143b5a88106efe1c9d44.png"
+								alt="Bonus Image"
+								class="bonus-image"
+							/>
+							<div class="bonus-details sa">
+								<p class="bonus-text">100% up to $500</p>
+								<p class="bonus-text">+ 200 Free Spins</p>
 							</div>
+							<button class="get-bonus-button">Get Bonus</button>
 						</div>
-						<button class="start-chat-button">Start Chat</button>
+
+						<div class="bonus-block">
+							<img
+								src="/img/b6a947a4c6853fc376ae3639d351d689.png"
+								alt="Bonus Image"
+								class="bonus-image"
+							/>
+							<div class="bonus-details sa">
+								<p class="bonus-text">100% up to $500</p>
+								<p class="bonus-text">+ 200 Free Spins</p>
+							</div>
+							<button class="get-bonus-button">Get Bonus</button>
+						</div>
+
+						<div class="vip-concierge-block">
+							<img
+								src="/img/d6d0fd92d66c4aee28a543c698720ce8.png"
+								alt=""
+								class="vipchats"
+							/>
+							<div class="vip-info-c">
+								<h2 class="vip-title">
+									Personal VIP Concierge
+								</h2>
+								<div class="manager-info">
+									<p class="manager-name">Chloe A.</p>
+									<p class="manager-status">Online</p>
+								</div>
+							</div>
+							<button class="start-chat-button">
+								Start Chat
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="bg-css">
-			<img src="/img/bg circle bottom (1).png" alt="" />
+			<div class="bg-css">
+				<img src="/img/bg circle bottom (1).png" alt="" />
+			</div>
 		</div>
-	</div>
 	</body>
 	<script src="/script/script.js"></script>
 </html>
