--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	</head>
 	<body>
 		<div class="container">
+			<div class="blur d-none"></div>
 			<div class="header">
 				<div class="bg-cs">
-					<img src="/img/bg circle bottom.png" alt="" />
+					<img src="img/bg circle top.png" alt="" />
 				</div>
 				<div class="header__arrow-back">
 					<img src="img/arrow.svg" alt="" />
@@ -204,6 +205,72 @@
 
 			<div class="bg-css">
 				<img src="/img/bg circle bottom (1).png" alt="" />
+			</div>
+		</div>
+		<div class="container notificate">
+			<!-- <div class="circle-back-red circle-back-red--top"></div> -->
+			<!-- <div class="circle-back-red circle-back-blue circle-back-blue--rigth"></div> -->
+			<div class="circle-back-red circle-back-blue circle-back-blue--left"></div>
+			<div class="circle-back-red circle-back-red--bottom"></div>
+			<header class="notificate__header">
+				<button class="notificate__close"></button>
+				<a class="notificate__link" href="#">Mark all as Read</a>
+				<h2 class="notificate__title">My notifications</h2>
+			</header>
+			<div class="notificate__inner">
+				<div class="notif-message">
+					<div class="notif-message__icon" style="mask-image: url('img/notif-icon.svg');"></div>
+					<div class="notif-message__content">
+						<h3 class="notif-message__title">Reward 100 VIPcoins</h3>
+						<p class="notif-message__text">Lorem ipsum dolor sit amet, consecte. Morbi sapien semper id viverra ddhkdhk dkjdskdjsdk s sjkdjdsk d ijdd kskssk djkdj kjdjjd.</p>
+						<span class="notif-message__time">20 mins ago</span>
+					</div>
+					<div class="notif-message__dott"></div>
+				</div>
+				<div class="notif-message">
+					<div class="notif-message__icon" style="mask-image: url('img/notif-icon.svg');"></div>
+					<div class="notif-message__content">
+						<h3 class="notif-message__title">Reward 100 VIPcoins</h3>
+						<p class="notif-message__text">Lorem ipsum dolor sit amet, consecte. Morbi sapien semper id viverra ddhkdhk dkjdskdjsdk s sjkdjdsk d ijdd kskssk djkdj kjdjjd.</p>
+						<span class="notif-message__time">3 hours ago</span>
+					</div>
+					<div class="notif-message__dott"></div>
+				</div>
+				<div class="notif-message">
+					<div class="notif-message__icon" style="mask-image: url('img/notif-icon.svg');"></div>
+					<div class="notif-message__content">
+						<h3 class="notif-message__title">Awarded $100 in VegasCasino</h3>
+						<p class="notif-message__text">Lorem ipsum dolor sit amet, consecte. Morbi sapien semper.</p>
+						<a href="#" class="notif-message__btn">CTA btn</a>
+					</div>
+					<div class="notif-message__dott"></div>
+				</div>
+
+				<div class="notif-message-no-border">
+					<div class="notif-message__icon" style="mask-image: url('img/notif-icon.svg');"></div>
+					<div class="notif-message__content">
+						<h3 class="notif-message-no-border__title">Reward 100 VIPcoins</h3>
+						<p class="notif-message__text notif-message-no-border__text">Lorem ipsum dolor sit amet, consecte. Morbi sapien semper id viverra ddhkdhk dkjdskdjsdk s sjkdjdsk d ijdd kskssk djkdj kjdjjd.</p>
+						<span class="notif-message-no-border__time">3 hours ago</span>
+					</div>
+				</div>
+				<div class="notif-message-no-border">
+					<div class="notif-message__icon" style="mask-image: url('img/notif-icon.svg');"></div>
+					<div class="notif-message__content">
+						<h3 class="notif-message-no-border__title">Reward 100 VIPcoins</h3>
+						<p class="notif-message__text notif-message-no-border__text">Lorem ipsum dolor sit amet, consecte. Morbi sapien semper id viverra ddhkdhk dkjdskdjsdk s sjkdjdsk d ijdd kskssk djkdj kjdjjd.</p>
+						<span class="notif-message-no-border__time">3 hours ago</span>
+						<a href="#" class="notif-message-no-border__text-link">Link btn</a>
+					</div>
+				</div>
+				<div class="notif-message-no-border">
+					<div class="notif-message__icon" style="mask-image: url('img/notif-icon.svg');"></div>
+					<div class="notif-message__content">
+						<h3 class="notif-message-no-border__title">Reward 100 VIPcoins</h3>
+						<p class="notif-message__text notif-message-no-border__text">Lorem ipsum dolor sit amet, consecte. Morbi sapien semper id viverra ddhkdhk dkjdskdjsdk s sjkdjdsk d ijdd kskssk djkdj kjdjjd.</p>
+						<span class="notif-message-no-border__time">05.01.2015</span>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
